ecosystem/NuSyQ-Hub/docs/errors/wizard_navigator_errors.txt
  File "C:\Users\malik\Documents\GitHub\KILO-FOOLISH\Scripts\wizard_navigator.py", line 1126
    return colorize("\u2694 Combat in the code realm! # File: c:\Users\malik\Documents\GitHub\KILO-FOOLISH\Scripts\wizard_navigator.py
                    ^
SyntaxError: unterminated string literal (detected at line 1126)
